--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "@auth0/angular-jwt": "^5.0.2",
     "angular-responsive-carousel": "^2.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
